[tool.poetry]
name = "android-alcodroid-backup-parser"
version = "0.1.0"
description = ""
authors = ["Thomas Riccardi <riccardi.thomas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
rich-click = "^1.7.4"
rich = "^13.7.1"
setuptools = "^69.2.0"
caterpillar = {git = "https://github.com/MatrixEditor/caterpillar.git", extras = ["all"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
